--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 01:05:03 2018</p>
+         Last Run: Sun Jul 15 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -34,10 +34,10 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>2</td>
                         <td>6</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>7</td>
                      </tr>
                      <tr>
@@ -46,23 +46,23 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>40</td>
                         <td>3</td>
-                        <td>8</td>
-                        <td>W</td>
+                        <td>6</td>
+                        <td>NW</td>
                         <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>4</td>
                         <td>6</td>
                         <td>NNE</td>
-                        <td>14</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -70,23 +70,23 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>ENE</td>
-                        <td>8</td>
+                        <td>NE</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>Partly Cloudy</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>7</td>
                         <td>6</td>
                         <td>ENE</td>
-                        <td>27</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -134,9 +134,9 @@
                "data":[
                  "16",
                  "19",
-                 "20",
+                 "21",
                  "22",
-                 "23"
+                 "24"
                ]
              },
              {
@@ -147,9 +147,9 @@
                "data":[
                  "16",
                  "19",
-                 "20",
+                 "21",
                  "22",
-                 "23"
+                 "24"
                ]
              }
            ]
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "47",
-                 "39",
-                 "34",
-                 "30",
-                 "27"
+                 "48",
+                 "40",
+                 "35",
+                 "29",
+                 "26"
                ]
              },
              {
@@ -228,9 +228,9 @@
                "data":[
                  "7",
                  "10",
-                 "14",
-                 "8",
-                 "27"
+                 "16",
+                 "12",
+                 "35"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 01:05:03 2018</p>
+         Last Run: Sun Jul 15 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -269,8 +269,8 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>30</td>
+                        <td>30</td>
                         <td>0</td>
                         <td>21</td>
                         <td>2</td>
@@ -286,7 +286,7 @@
                         <td>0</td>
                         <td>23</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -344,7 +344,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "29",
+                 "30",
                  "29",
                  "27"
                ]
@@ -355,7 +355,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "29",
+                 "30",
                  "29",
                  "27"
                ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 01:05:03 2018</p>
+         Last Run: Sun Jul 15 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -472,11 +472,11 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>28</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -484,23 +484,23 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>1</td>
-                        <td>43</td>
+                        <td>45</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>E</td>
-                        <td>52</td>
+                        <td>10</td>
+                        <td>ENE</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -546,7 +546,7 @@
                "data":[
                  "28",
                  "27",
-                 "25"
+                 "24"
                ]
              },
              {
@@ -557,7 +557,7 @@
                "data":[
                  "28",
                  "27",
-                 "25"
+                 "24"
                ]
              }
            ]
@@ -618,9 +618,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
-                 "35",
-                 "43"
+                 "31",
+                 "36",
+                 "45"
                ]
              },
              {
@@ -628,9 +628,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "40",
-                 "52"
+                 "29",
+                 "41",
+                 "54"
                ]
              }
            ]
@@ -647,7 +647,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 01:05:03 2018</p>
+         Last Run: Sun Jul 15 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -674,31 +674,31 @@
                         <td>5</td>
                         <td>35</td>
                         <td>3</td>
-                        <td>14</td>
-                        <td>ESE</td>
-                        <td>39</td>
+                        <td>13</td>
+                        <td>SE</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>15</td>
-                        <td>36</td>
+                        <td>26</td>
+                        <td>26</td>
+                        <td>12</td>
+                        <td>37</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SE</td>
-                        <td>40</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>19</td>
-                        <td>40</td>
-                        <td>1</td>
                         <td>14</td>
+                        <td>41</td>
+                        <td>1</td>
+                        <td>13</td>
                         <td>E</td>
                         <td>37</td>
                      </tr>
@@ -707,12 +707,12 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>20</td>
-                        <td>48</td>
+                        <td>17</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NE</td>
-                        <td>31</td>
+                        <td>32</td>
                      </tr>
                   </tbody>
                </table>
@@ -758,7 +758,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "26",
-                 "25",
+                 "26",
                  "24",
                  "22"
                ]
@@ -770,7 +770,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "26",
-                 "25",
+                 "26",
                  "24",
                  "22"
                ]
@@ -825,9 +825,9 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "15",
-                 "19",
-                 "20"
+                 "12",
+                 "14",
+                 "17"
                ]
              },
              {
@@ -836,9 +836,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "35",
-                 "36",
-                 "40",
-                 "48"
+                 "37",
+                 "41",
+                 "49"
                ]
              },
              {
@@ -846,10 +846,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "39",
-                 "40",
+                 "41",
+                 "42",
                  "37",
-                 "31"
+                 "32"
                ]
              }
            ]
@@ -866,7 +866,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 01:05:03 2018</p>
+         Last Run: Sun Jul 15 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -888,14 +888,14 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>3</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>3</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>21</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -903,11 +903,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>4</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>4</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>14</td>
+                        <td>WNW</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -918,8 +918,8 @@
                         <td>42</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>11</td>
+                        <td>WNW</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -930,8 +930,8 @@
                         <td>37</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>WNW</td>
-                        <td>14</td>
+                        <td>W</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -942,8 +942,8 @@
                         <td>35</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>WNW</td>
-                        <td>21</td>
+                        <td>W</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -989,7 +989,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "17",
+                 "18",
                  "19",
                  "20",
                  "21",
@@ -1002,7 +1002,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "17",
+                 "18",
                  "19",
                  "20",
                  "21",
@@ -1071,8 +1071,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "49",
+                 "58",
+                 "50",
                  "42",
                  "37",
                  "35"
@@ -1083,11 +1083,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
                  "14",
-                 "11",
-                 "14",
-                 "21"
+                 "15",
+                 "15",
+                 "16",
+                 "17"
                ]
              }
            ]
