--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 02:05:04 2018</p>
+         Last Run: Sun Jul 15 03:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -49,8 +49,8 @@
                         <td>40</td>
                         <td>3</td>
                         <td>6</td>
-                        <td>NW</td>
-                        <td>10</td>
+                        <td>NNW</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -58,7 +58,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>4</td>
                         <td>6</td>
                         <td>NNE</td>
@@ -216,7 +216,7 @@
                "data":[
                  "48",
                  "40",
-                 "35",
+                 "34",
                  "29",
                  "26"
                ]
@@ -227,7 +227,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "7",
-                 "10",
+                 "11",
                  "16",
                  "12",
                  "35"
@@ -242,12 +242,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 02:05:04 2018</p>
+         Last Run: Sun Jul 15 03:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -447,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 02:05:04 2018</p>
+         Last Run: Sun Jul 15 03:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -471,24 +472,24 @@
                         <td>Clear</td>
                         <td>28</td>
                         <td>28</td>
-                        <td>0</td>
+                        <td>4</td>
                         <td>31</td>
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>29</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>27</td>
                         <td>27</td>
-                        <td>0</td>
+                        <td>4</td>
                         <td>36</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>41</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -499,8 +500,8 @@
                         <td>45</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>ENE</td>
-                        <td>54</td>
+                        <td>E</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -608,8 +609,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
-                 "0",
+                 "4",
+                 "4",
                  "1"
                ]
              },
@@ -628,9 +629,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "41",
-                 "54"
+                 "26",
+                 "34",
+                 "41"
                ]
              }
            ]
@@ -647,7 +648,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 02:05:04 2018</p>
+         Last Run: Sun Jul 15 03:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -671,48 +672,48 @@
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>5</td>
-                        <td>35</td>
+                        <td>1</td>
+                        <td>37</td>
                         <td>3</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SE</td>
-                        <td>41</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>12</td>
-                        <td>37</td>
+                        <td>9</td>
+                        <td>38</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>42</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>14</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>8</td>
                         <td>41</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>E</td>
-                        <td>37</td>
+                        <td>14</td>
+                        <td>ESE</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>17</td>
-                        <td>49</td>
+                        <td>Clear</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>8</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>NE</td>
-                        <td>32</td>
+                        <td>ENE</td>
+                        <td>24</td>
                      </tr>
                   </tbody>
                </table>
@@ -759,8 +760,8 @@
                "data":[
                  "26",
                  "26",
-                 "24",
-                 "22"
+                 "25",
+                 "23"
                ]
              },
              {
@@ -771,8 +772,8 @@
                "data":[
                  "26",
                  "26",
-                 "24",
-                 "22"
+                 "25",
+                 "23"
                ]
              }
            ]
@@ -824,10 +825,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "12",
-                 "14",
-                 "17"
+                 "1",
+                 "9",
+                 "8",
+                 "8"
                ]
              },
              {
@@ -835,10 +836,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
                  "37",
+                 "38",
                  "41",
-                 "49"
+                 "47"
                ]
              },
              {
@@ -846,10 +847,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
-                 "42",
-                 "37",
-                 "32"
+                 "38",
+                 "38",
+                 "31",
+                 "24"
                ]
              }
            ]
@@ -866,7 +867,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 02:05:04 2018</p>
+         Last Run: Sun Jul 15 03:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
